@startuml

title __UTIL's Class Diagram__\n

  namespace org.factcast.client.grpc.cli {
    namespace util {
      interface org.factcast.client.grpc.cli.util.Command {
          {abstract} + runWith()
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace util {
      class org.factcast.client.grpc.cli.util.ConsoleFactObserver {
          - done : AtomicBoolean
          + ConsoleFactObserver()
          + awaitTermination()
          + onCatchup()
          + onComplete()
          + onError()
          + onNext()
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace util {
      class org.factcast.client.grpc.cli.util.FactRenderer {
          {static} - CR : String
          {static} - TAB : String
          + FactRenderer()
          + render()
          - renderJson()
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace util {
      class org.factcast.client.grpc.cli.util.Options {
          ~ address : String
          ~ basicAuthCredentials : String
          ~ debug : boolean
          ~ help : boolean
          ~ notls : boolean
          ~ pretty : boolean
          + Options()
      }
    }
  }
  

  namespace org.factcast.client.grpc.cli {
    namespace util {
      class org.factcast.client.grpc.cli.util.Parser {
          {static} - ADDRESS_SYSPROP_NAME : String
          {static} - BASICAUTH_SYSPROP_NAME : String
          {static} - NEGOTIATION_SYSPROP_NAME : String
          - jc : JCommander
          + Parser()
          + options()
          + parse()
          + usage()
          - init()
      }
    }
  }
  

  org.factcast.client.grpc.cli.util.ConsoleFactObserver .up.|> org.factcast.core.subscription.observer.FactObserver
  org.factcast.client.grpc.cli.util.ConsoleFactObserver o-- org.factcast.client.grpc.cli.util.FactRenderer : factRenderer
  org.factcast.client.grpc.cli.util.FactRenderer o-- org.factcast.client.grpc.cli.util.Options : options
  org.factcast.client.grpc.cli.util.Parser o-- org.factcast.client.grpc.cli.util.Options : options


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
